src/serialbox-python/serialbox/metainfomap.py

#!/usr/bin/python3
# -*- coding: utf-8 -*-
##===-----------------------------------------------------------------------------*- Python -*-===##
##
##                                   S E R I A L B O X
##
## This file is distributed under terms of BSD license.
## See LICENSE.txt for more information.
##
##===------------------------------------------------------------------------------------------===##
##
## This file contains the metainfo implementation of the Python Interface.
##
##===------------------------------------------------------------------------------------------===##

from ctypes import (c_void_p, c_bool, c_int, c_int32, c_int64, c_float, c_double, c_char_p,
                    Structure, POINTER)

from .common import get_library, to_c_string
from .error import invoke, SerialboxError
from .type import *

lib = get_library()


class MetainfoImpl(Structure):
    """ Mapping of serialboxMetainfo_t """
    _fields_ = [("impl", c_void_p), ("ownsData", c_int)]


class MetainfoElementInfoImpl(Structure):
    """ Mapping of serialboxMetainfoElementInfo_t """
    _fields_ = [("keys", POINTER(c_char_p)),
                ("types", POINTER(c_int)),
                ("len", c_int)]


class ArrayOfBooleanImpl(Structure):
    """ Mapping of serialboxArrayOfBoolean_t """
    _fields_ = [("data", POINTER(c_int)), ("len", c_int)]


class ArrayOfInt32Impl(Structure):
    """ Mapping of serialboxArrayOfInt32_t """
    _fields_ = [("data", POINTER(c_int32)), ("len", c_int)]


class ArrayOfInt64Impl(Structure):
    """ Mapping of serialboxArrayOfInt64_t """
    _fields_ = [("data", POINTER(c_int64)), ("len", c_int)]


class ArrayOfFloat32Impl(Structure):
    """ Mapping of serialboxArrayOfFloat32_t """
    _fields_ = [("data", POINTER(c_float)), ("len", c_int)]


class ArrayOfFloat64Impl(Structure):
    """ Mapping of serialboxArrayOfFloat64_t """
    _fields_ = [("data", POINTER(c_double)), ("len", c_int)]


class ArrayOfStringImpl(Structure):
    """ Mapping of serialboxArrayOfString_t """
    _fields_ = [("data", POINTER(c_char_p)), ("len", c_int)]


def register_library(library):
    #
    # Construction & Destruction
    #
    library.serialboxMetainfoCreate.argtypes = None
    library.serialboxMetainfoCreate.restype = POINTER(MetainfoImpl)

    library.serialboxMetainfoCreateFromMetainfo.argtypes = [POINTER(MetainfoImpl)]
    library.serialboxMetainfoCreateFromMetainfo.restype = POINTER(MetainfoImpl)

    library.serialboxMetainfoDestroy.argtypes = [POINTER(MetainfoImpl)]
    library.serialboxMetainfoDestroy.restype = None

    #
    # Utility
    #
    library.serialboxMetainfoGetSize.argtypes = [POINTER(MetainfoImpl)]
    library.serialboxMetainfoGetSize.restype = c_int

    library.serialboxMetainfoIsEmpty.argtypes = [POINTER(MetainfoImpl)]
    library.serialboxMetainfoIsEmpty.restype = c_int

    library.serialboxMetainfoClear.argtypes = [POINTER(MetainfoImpl)]
    library.serialboxMetainfoClear.restype = None

    library.serialboxMetainfoEqual.argtypes = [POINTER(MetainfoImpl), POINTER(MetainfoImpl)]
    library.serialboxMetainfoEqual.restype = c_int

    library.serialboxMetainfoHasKey.argtypes = [POINTER(MetainfoImpl), c_char_p]
    library.serialboxMetainfoHasKey.restype = c_int

    library.serialboxMetainfoGetTypeIDOfKey.argtypes = [POINTER(MetainfoImpl), c_char_p]
    library.serialboxMetainfoGetTypeIDOfKey.restype = c_int

    library.serialboxMetainfoToString.argtypes = [POINTER(MetainfoImpl)]
    library.serialboxMetainfoToString.restype = c_char_p

    library.serialboxMetainfoCreateElementInfo.argtypes = [POINTER(MetainfoImpl)]
    library.serialboxMetainfoCreateElementInfo.restype = POINTER(MetainfoElementInfoImpl)

    library.serialboxMetainfoDestroyElementInfo.argtypes = [POINTER(MetainfoElementInfoImpl)]
    library.serialboxMetainfoDestroyElementInfo.restype = None

    library.serialboxMetainfoDeleteKey.argtypes = [POINTER(MetainfoImpl), c_char_p]
    library.serialboxMetainfoDeleteKey.restype = c_int

    #
    # Arrays
    #
    library.serialboxArrayOfBooleanCreate.argtypes = [c_int]
    library.serialboxArrayOfBooleanCreate.restype = POINTER(ArrayOfBooleanImpl)

    library.serialboxArrayOfInt32Create.argtypes = [c_int]
    library.serialboxArrayOfInt32Create.restype = POINTER(ArrayOfInt32Impl)

    library.serialboxArrayOfInt64Create.argtypes = [c_int]
    library.serialboxArrayOfInt64Create.restype = POINTER(ArrayOfInt64Impl)

    library.serialboxArrayOfFloat32Create.argtypes = [c_int]
    library.serialboxArrayOfFloat32Create.restype = POINTER(ArrayOfFloat32Impl)

    library.serialboxArrayOfFloat64Create.argtypes = [c_int]
    library.serialboxArrayOfFloat64Create.restype = POINTER(ArrayOfFloat64Impl)

    library.serialboxArrayOfStringCreate.argtypes = [c_int]
    library.serialboxArrayOfStringCreate.restype = POINTER(ArrayOfStringImpl)

    library.serialboxArrayOfBooleanDestroy.argtypes = [POINTER(ArrayOfBooleanImpl)]
    library.serialboxArrayOfBooleanDestroy.restype = None

    library.serialboxArrayOfInt32Destroy.argtypes = [POINTER(ArrayOfInt32Impl)]
    library.serialboxArrayOfInt32Destroy.restype = None

    library.serialboxArrayOfInt64Destroy.argtypes = [POINTER(ArrayOfInt64Impl)]
    library.serialboxArrayOfInt64Destroy.restype = None

    library.serialboxArrayOfFloat32Destroy.argtypes = [POINTER(ArrayOfFloat32Impl)]
    library.serialboxArrayOfFloat32Destroy.restype = None

    library.serialboxArrayOfFloat64Destroy.argtypes = [POINTER(ArrayOfFloat64Impl)]
    library.serialboxArrayOfFloat64Destroy.restype = None

    library.serialboxArrayOfStringDestroy.argtypes = [POINTER(ArrayOfStringImpl)]
    library.serialboxArrayOfStringDestroy.restype = None

    #
    # Add meta-information
    #
    library.serialboxMetainfoAddBoolean.argtypes = [POINTER(MetainfoImpl), c_char_p, c_bool]
    library.serialboxMetainfoAddBoolean.restype = c_int

    library.serialboxMetainfoAddInt32.argtypes = [POINTER(MetainfoImpl), c_char_p, c_int32]
    library.serialboxMetainfoAddInt32.restype = c_int

    library.serialboxMetainfoAddInt64.argtypes = [POINTER(MetainfoImpl), c_char_p, c_int64]
    library.serialboxMetainfoAddInt64.restype = c_int

    library.serialboxMetainfoAddFloat32.argtypes = [POINTER(MetainfoImpl), c_char_p, c_float]
    library.serialboxMetainfoAddFloat32.restype = c_int

    library.serialboxMetainfoAddFloat64.argtypes = [POINTER(MetainfoImpl), c_char_p, c_double]
    library.serialboxMetainfoAddFloat64.restype = c_int

    library.serialboxMetainfoAddString.argtypes = [POINTER(MetainfoImpl), c_char_p, c_char_p]
    library.serialboxMetainfoAddString.restype = c_int

    library.serialboxMetainfoAddArrayOfBoolean.argtypes = [POINTER(MetainfoImpl), c_char_p,
                                                           POINTER(ArrayOfBooleanImpl)]
    library.serialboxMetainfoAddArrayOfBoolean.restype = c_int

    library.serialboxMetainfoAddArrayOfInt32.argtypes = [POINTER(MetainfoImpl), c_char_p,
                                                         POINTER(ArrayOfInt32Impl)]
    library.serialboxMetainfoAddArrayOfInt32.restype = c_int

    library.serialboxMetainfoAddArrayOfInt64.argtypes = [POINTER(MetainfoImpl), c_char_p,
                                                         POINTER(ArrayOfInt64Impl)]
    library.serialboxMetainfoAddArrayOfInt64.restype = c_int

    library.serialboxMetainfoAddArrayOfFloat32.argtypes = [POINTER(MetainfoImpl), c_char_p,
                                                           POINTER(ArrayOfFloat32Impl)]
    library.serialboxMetainfoAddArrayOfFloat32.restype = c_int

    library.serialboxMetainfoAddArrayOfFloat64.argtypes = [POINTER(MetainfoImpl), c_char_p,
                                                           POINTER(ArrayOfFloat64Impl)]
    library.serialboxMetainfoAddArrayOfFloat64.restype = c_int

    library.serialboxMetainfoAddArrayOfString.argtypes = [POINTER(MetainfoImpl), c_char_p,
                                                          POINTER(ArrayOfStringImpl)]
    library.serialboxMetainfoAddArrayOfString.restype = c_int

    #
    # Query meta-information
    #
    library.serialboxMetainfoGetBoolean.argtypes = [POINTER(MetainfoImpl), c_char_p]
    library.serialboxMetainfoGetBoolean.restype = c_int

    library.serialboxMetainfoGetInt32.argtypes = [POINTER(MetainfoImpl), c_char_p]
    library.serialboxMetainfoGetInt32.restype = c_int32

    library.serialboxMetainfoGetInt64.argtypes = [POINTER(MetainfoImpl), c_char_p]
    library.serialboxMetainfoGetInt64.restype = c_int64

    library.serialboxMetainfoGetFloat32.argtypes = [POINTER(MetainfoImpl), c_char_p]
    library.serialboxMetainfoGetFloat32.restype = c_float

    library.serialboxMetainfoGetFloat64.argtypes = [POINTER(MetainfoImpl), c_char_p]
    library.serialboxMetainfoGetFloat64.restype = c_double

    library.serialboxMetainfoGetString.argtypes = [POINTER(MetainfoImpl), c_char_p]
    library.serialboxMetainfoGetString.restype = c_char_p

    library.serialboxMetainfoGetArrayOfBoolean.argtypes = [POINTER(MetainfoImpl), c_char_p]
    library.serialboxMetainfoGetArrayOfBoolean.restype = POINTER(ArrayOfBooleanImpl)

    library.serialboxMetainfoGetArrayOfInt32.argtypes = [POINTER(MetainfoImpl), c_char_p]
    library.serialboxMetainfoGetArrayOfInt32.restype = POINTER(ArrayOfInt32Impl)

    library.serialboxMetainfoGetArrayOfInt64.argtypes = [POINTER(MetainfoImpl), c_char_p]
    library.serialboxMetainfoGetArrayOfInt64.restype = POINTER(ArrayOfInt64Impl)

    library.serialboxMetainfoGetArrayOfFloat32.argtypes = [POINTER(MetainfoImpl), c_char_p]
    library.serialboxMetainfoGetArrayOfFloat32.restype = POINTER(ArrayOfFloat32Impl)

    library.serialboxMetainfoGetArrayOfFloat64.argtypes = [POINTER(MetainfoImpl), c_char_p]
    library.serialboxMetainfoGetArrayOfFloat64.restype = POINTER(ArrayOfFloat64Impl)

    library.serialboxMetainfoGetArrayOfString.argtypes = [POINTER(MetainfoImpl), c_char_p]
    library.serialboxMetainfoGetArrayOfString.restype = POINTER(ArrayOfStringImpl)


class MetainfoMapIterator(object):
    """Iterator of the MetainfoMap
    """

    def __init__(self, metainfomap):
        self.__metainfomap = metainfomap
        self.__idx = 0
        self.__elements = invoke(lib.serialboxMetainfoCreateElementInfo, metainfomap.impl())

    def __next__(self):
        if self.__idx >= self.__elements.contents.len:
            raise StopIteration
        else:
            i = self.__idx
            self.__idx += 1
            return (self.__elements.contents.keys[i].decode(),
                    self.__metainfomap.__getitem__(
                        self.__elements.contents.keys[i].decode(),
                        self.__elements.contents.types[i]))

    def __del__(self):
        invoke(lib.serialboxMetainfoDestroyElementInfo, self.__elements)


class MetainfoMap(object):
    """Meta-information implementation of the Python Interface.

    Objects of this class contain a map of meta-information in form of `key = value` or
    `key = {value1, ... valueN}` pair. The keys are strings and unique, while the values can be
    integers, booleans, floating point numbers (either single or double precision) or strings.

    The elements are internally stored as a hash-map and thus the order of insertion is irrelevant.
    The MetainfoMaps can be constrcuted from python dictionary :class:`dict`.

        >>> m = MetainfoMap({'key1': 1, 'key2': 'str'})
        >>> m
        <MetainfoMap {"key2": str, "key": 5}>
        >>>

    """

    def __init__(self, metainfo=None, impl=None):
        """Initialize the Metainfo map.

        If `metainfo` is None, an empty map is created. Elements can be added later with
        :func:`MetainfoMap.insert <serialbox.MetainfoMap.insert>`.
